; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-rx8025.c_rx8025_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-rx8025.c_rx8025_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_client = type { i32 }
%struct.rx8025_data = type { i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @rx8025_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rx8025_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.i2c_client*, align 8
  %6 = alloca %struct.rx8025_data*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = bitcast i8* %7 to %struct.i2c_client*
  store %struct.i2c_client* %8, %struct.i2c_client** %5, align 8
  %9 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %10 = call %struct.rx8025_data* @i2c_get_clientdata(%struct.i2c_client* %9)
  store %struct.rx8025_data* %10, %struct.rx8025_data** %6, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @disable_irq_nosync(i32 %11)
  %13 = load %struct.rx8025_data*, %struct.rx8025_data** %6, align 8
  %14 = getelementptr inbounds %struct.rx8025_data, %struct.rx8025_data* %13, i32 0, i32 0
  %15 = call i32 @schedule_work(i32* %14)
  %16 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %16
}

declare dso_local %struct.rx8025_data* @i2c_get_clientdata(%struct.i2c_client*) #1

declare dso_local i32 @disable_irq_nosync(i32) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
